==> Ai-Thinker-Open/aithinker_dev_open_sdk/adt/adt_os/adapter_chip/chip/port/bl616/peripheral_drive/gpio/aiio_gpio.c <==
/**
 * @brief   GPIO intermediate device port adaptation
 * 
 * @file    aiio_gpio.c
 * @copyright Copyright (C) 2020-2023, Shenzhen Anxinke Technology Co., Ltd
 * @note 
 * @par Change Logs:
 * <table>
 * <tr><th>Date               <th>Version             <th>Author           <th>Notes
 * <tr><td>2023-06-27          <td>1.0.0            <td>zhuolm             <td> device port adaptation
 */
#include "stdint.h"
#include "aiio_gpio.h"
#include "bflb_gpio.h"
#include "aiio_log.h"

#define DEF_PIN_ID_MAX (63)

typedef struct
{
    uint8_t inited ;  /**< 0 deinit 1 init*/
    bool    irq_en;
    uint8_t pin;
    uint8_t cfg_in_out;
    uint8_t cfg_pudn;
    uint8_t cfg_smt_en;
    uint8_t cfg_drv;
    struct bflb_device_s *gpio;
    aiio_hal_gpio_int_cb_t aiio_hal_gpio_int_cb;
} aiio_gpio_t;

static aiio_gpio_t io_port[DEF_PIN_ID_MAX + 1] = {0};


void gpio_isr(int32_t irq, void *arg)
{
    uint8_t val1 = *(uint8_t *)arg;
    aiio_log_d("isr gpio_pin=%d\r\n", val1);
    bool intstatus = bflb_gpio_get_intstatus(io_port[val1].gpio, io_port[val1].pin);
    if (intstatus) {
        aiio_log_d("isr trigger\r\n");
        (*io_port[val1].aiio_hal_gpio_int_cb)(irq,arg);
        bflb_gpio_int_clear(io_port[val1].gpio, io_port[val1].pin);
    }
}


aiio_ret_t aiio_hal_gpio_init(uint32_t port, uint16_t pin)
{
    struct bflb_device_s *gpio;
    (void)port;

    if (io_port[pin].inited || pin > DEF_PIN_ID_MAX)
        return AIIO_ERR_INIT_FAIL;

    gpio = bflb_device_get_by_name("gpio");

    io_port[pin].pin = pin;
    io_port[pin].gpio = gpio;
    io_port[pin].cfg_smt_en = GPIO_SMT_EN;
    io_port[pin].cfg_drv = GPIO_DRV_0;

    bflb_gpio_init(io_port[pin].gpio, io_port[pin].pin, io_port[pin].cfg_in_out | io_port[pin].cfg_pudn | io_port[pin].cfg_smt_en | io_port[pin].cfg_drv);
    io_port[pin].inited = 1;

    return AIIO_SUCC;
}


aiio_ret_t aiio_hal_gpio_deinit(uint32_t port, uint16_t pin)
{
    (void)port;

    if (!io_port[pin].inited || pin > DEF_PIN_ID_MAX)
        return AIIO_ERR_INIT_FAIL;

    if (io_port[pin].irq_en)
    {
        io_port[pin].irq_en = false;
        bflb_gpio_int_mask(io_port[pin].gpio, pin, true);
    }

    bflb_gpio_deinit(io_port[pin].gpio, pin);
    io_port[pin].inited = 0;
    return AIIO_SUCC;
}


int32_t aiio_hal_gpio_pin_direction_set(uint32_t port, uint16_t pin, aiio_gpio_direction_t dir)
{
    (void)port;

    if (pin > DEF_PIN_ID_MAX)
        return AIIO_ERR_INIT_FAIL;

    if (AIIO_GPIO_INPUT == dir)
    {
        io_port[pin].cfg_in_out = GPIO_INPUT;
    }
    else
    {
        io_port[pin].cfg_in_out = GPIO_OUTPUT;
    }

    if(io_port[pin].inited)
    {
        aiio_hal_gpio_deinit(port, pin);
        aiio_hal_gpio_init(port, pin);
    }
    else
    {
        aiio_hal_gpio_init(port, pin);
    }

    return AIIO_SUCC;
}


int32_t aiio_hal_gpio_pin_pull_set(uint32_t port, uint16_t pin, aiio_gpio_pull_t pull)
{
    (void)port;

    if (pin > DEF_PIN_ID_MAX)
        return AIIO_ERR_INIT_FAIL;

    if (AIIO_GPIO_PULL_DOWN == pull)
    {
        io_port[pin].cfg_pudn = GPIO_PULLDOWN;
    }
    else
    {
        io_port[pin].cfg_pudn = GPIO_PULLUP;
    }

    if(io_port[pin].inited)
    {
        aiio_hal_gpio_deinit(port, pin);
        aiio_hal_gpio_init(port, pin);
    }
    else
    {
        aiio_hal_gpio_init(port, pin);
    }

    return AIIO_SUCC;
}


aiio_ret_t aiio_hal_gpio_set(uint32_t port, uint16_t pin, uint8_t OnOff)
{
    (void)port;
    if (!io_port[pin].inited || pin > DEF_PIN_ID_MAX)
        return AIIO_ERR_INIT_FAIL;

    if (OnOff)
    {
        bflb_gpio_set(io_port[pin].gpio, io_port[pin].pin);
    }
    else
    {
        bflb_gpio_reset(io_port[pin].gpio, io_port[pin].pin);
    }
    return AIIO_SUCC;
}


uint8_t aiio_hal_gpio_get(uint32_t port, uint16_t pin)
{
    (void)port;
    uint8_t value;
    if (!io_port[pin].inited || pin > DEF_PIN_ID_MAX)
        return AIIO_ERR_INIT_FAIL;

    if(bflb_gpio_read(io_port[pin].gpio, io_port[pin].pin))
    {
        value = 1;
    }
    else
    {
        value = 0;
    }

    return value;
}


aiio_ret_t aiio_hal_gpio_int_enable(uint32_t port, uint16_t pin, uint8_t en)
{
    (void)port;
    if (!io_port[pin].inited || io_port[pin].cfg_in_out || pin > DEF_PIN_ID_MAX)
        return AIIO_ERR_INIT_FAIL;
    if (!en)
    {
        io_port[pin].irq_en = 0;
        bflb_gpio_int_mask(io_port[pin].gpio, io_port[pin].pin, true);
        bflb_irq_disable(io_port[pin].gpio->irq_num);
    }else{
        io_port[pin].irq_en = 1;
        bflb_gpio_int_mask(io_port[pin].gpio, io_port[pin].pin, false);    
        bflb_irq_enable(io_port[pin].gpio->irq_num);
    }
    return AIIO_SUCC;
}


aiio_ret_t aiio_hal_gpio_int_register(uint32_t port, uint16_t pin, aiio_hal_gpio_int_cb_t cb)
{
    (void)port;
    if (!io_port[pin].inited || io_port[pin].cfg_in_out || pin > DEF_PIN_ID_MAX)
        return AIIO_ERR_INIT_FAIL;

    io_port[pin].aiio_hal_gpio_int_cb = cb;
    io_port[pin].pin = pin;    
    io_port[pin].irq_en = 1;

    if (io_port[pin].cfg_pudn == GPIO_PULLDOWN)
    {
        bflb_gpio_int_init(io_port[pin].gpio, io_port[pin].pin, GPIO_INT_TRIG_MODE_ASYNC_RISING_EDGE);
    }
    else if(io_port[pin].cfg_pudn == GPIO_PULLUP)
    {
        bflb_gpio_int_init(io_port[pin].gpio, io_port[pin].pin, GPIO_INT_TRIG_MODE_SYNC_FALLING_EDGE);
    }

    bflb_gpio_int_mask(io_port[pin].gpio, io_port[pin].pin, false);

    bflb_irq_attach(io_port[pin].gpio->irq_num, gpio_isr, &io_port[pin].pin);
    bflb_irq_enable(io_port[pin].gpio->irq_num);
 
    return AIIO_SUCC;
}
